[package]
name = "canvaskit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3

[dependencies]
embedded-graphics = "0.7.1"
image = "0.24.5"
rusttype = "0.9.3"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
serde_json = "1.0.93"
tiny-skia = "0.8.3"
wasm-bindgen = "0.2.84"
wasm-bindgen-test = "0.3.34"
